<resources>
    <string name="app_name">SecretBook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="password_hint">输入密码</string>
    <string name="login">登录</string>
    <string name="title_activity_choose_operation">操作选择</string>
    <string name="propmpt">选择一下吧：</string>
    <string name="add">新增记录</string>
    <string name="delete">删除记录</string>
    <string name="update">修改记录</string>
    <string name="query">查询</string>
    <string name="queryAll">查看全部</string>
    <string name="title_activity_add">编辑</string>
    <string name="account_hint">站点名称</string>
    <string name="sitename">站点名称</string>
    <string name="site_name_hint">如：百度</string>
    <string name="account_name">账户名</string>
    <string name="account_name_hint">如：cuishixiang</string>
    <string name="password">密码</string>
    <string name="password_sample">如：abc123***789</string>
    <string name="save_button">保存</string>
    <string name="note">备注：</string>
    <string name="exit">退出</string>
    <string name="main_title">密码本</string>
    <string name="title_activity_display_all">所有信息</string>
    <string name="delete_menu">删除</string>
</resources>
